test: Adding K8S Tests and Mocks This commit includes golden scenario tests for our controllers as well as allows us to optionally mock calls to k8s and cloud services APIs.