@@ -1,13 +1,12 @@
 package org.bf2.test.mock;
 
 import io.quarkus.test.junit.QuarkusTestProfile;
-import java.util.Collections;
 import java.util.Map;
 
 public class MockSyncProfile implements QuarkusTestProfile {
 
   @Override
   public Map<String, String> getConfigOverrides() {
-    return Collections.singletonMap("quarkus.scheduler.enabled", "false");
+    return Map.of("quarkus.scheduler.enabled", "false", "rhoas.client.useMocks", "true");
   }
 }
